--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,8 @@ dist.jar=${dist.dir}/skripsi.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jfoenix-8.0.8.jar=C:\\Users\\Tohar\\Documents\\rsc\\jfoenix-8.0.8.jar
-file.reference.sql2o-1.6.0.jar=C:\\Users\\Tohar\\Documents\\rsc\\sql2o-1.6.0.jar
+file.reference.jfoenix-8.0.8.jar=src\\lib\\jfoenix-8.0.8.jar
+file.reference.sql2o-1.6.0.jar=src\\lib\\sql2o-1.6.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,8 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.sql2o-1.6.0.jar}:\
-    ${file.reference.jfoenix-8.0.8.jar}
+    ${file.reference.jfoenix-8.0.8.jar}:\
+    ${file.reference.sql2o-1.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
