--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,12 @@ dist.jar=${dist.dir}/skripsi.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.io-7.1.5.jar=lib\\io-7.1.5.jar
 file.reference.jfoenix-8.0.8.jar=src\\lib\\jfoenix-8.0.8.jar
+file.reference.joda-time-2.10.1.jar=lib\\joda-time-2.10.1.jar
+file.reference.kernel-7.1.5.jar=lib\\kernel-7.1.5.jar
+file.reference.layout-7.1.5.jar=lib\\layout-7.1.5.jar
+file.reference.slf4j-api-1.7.13.jar=lib\\slf4j-api-1.7.13.jar
 file.reference.sql2o-1.6.0.jar=src\\lib\\sql2o-1.6.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -40,7 +45,12 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jfoenix-8.0.8.jar}:\
-    ${file.reference.sql2o-1.6.0.jar}
+    ${file.reference.sql2o-1.6.0.jar}:\
+    ${file.reference.io-7.1.5.jar}:\
+    ${file.reference.kernel-7.1.5.jar}:\
+    ${file.reference.layout-7.1.5.jar}:\
+    ${file.reference.slf4j-api-1.7.13.jar}:\
+    ${file.reference.joda-time-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
